# password-manager

./: .gitignore  CMakeLists.txt  README.md
include/: cli.hpp  encryption.hpp  globals.hpp  login.hpp  map.hpp  serialisation.hpp
src/: CMakeLists.txt  cli.cpp  encryption.cpp  login.cpp  main.cpp  map.cpp  serialization.cpp
tests/: CMakeLists.txt  encryption.cpp  serialization.cpp
